# CustomRenderer

./: CMakeLists.txt  README.md
assets/glsl_shaders/: BlinnPhong.frag  BlinnPhong.fs  BlinnPhong.vert  Blit.frag  Blit.fs  Blit.vs  Cube.vs  Default.frag  Default.fs  Default.vert  Default.vs  DeferredLit.fs  Emissive.frag  Emissive.fs  Emissive.vert  GBuffer.fs  GBuffer.vs  GenerateBRDFLUT.frag  GenerateBRDFLUT.fs  HDRToCubemap.frag  HDRToCubemap.fs  HDRToCubemap.vs  IrradianceCubemap.frag  IrradianceCubemap.fs  LightSphere.vs  Lit.vert  Lit.vs  PBRLit.frag  PBRLit.fs  PBRLit.vert  PBRLit.vs  PrefilteredCubemap.frag  PrefilteredCubemap.fs  RenderLight.fs  RenderLight.vert  ShadowCaster.frag  ShadowCaster.vert  ShadowCaster.vs  Skybox.frag  Skybox.fs  (+4 more)
assets/glsl_shaders/common/: BRDF.glsl  Defines.glsl  Functions.glsl  Uniforms.glsl  functions.glsl  tonemapping.glsl  uniforms.glsl
assets/glsl_shaders/environment/: Cube.vert  GenerateBRDFLUT.fs  HDRToCubemap.fs  IrradianceCubemap.fs  PrefilteredCubemap.fs
assets/glsl_shaders/pbr/: Lighting.glsl  brdfs.glsl
assets/glsl_shaders/post_processing/: Blit.frag  Blit.fs  Blit.vert  BloomBlurHorizontal.frag  BloomBlurVertical.frag  BloomPrefilter.frag  BloomUpsample.frag  CombinePost.frag  CombinePost.fs  FXAA.frag  FXAA.glsl  FinalPost.frag  FinalPost.fs  tonemapping.glsl
assets/glsl_shaders/post_processing/bloom/: BloomBlurHorizontal.frag  BloomBlurHorizontal.fs  BloomBlurVertical.frag  BloomBlurVertical.fs  BloomDownsample2x.frag  BloomDownsample2x.fs  BloomPrefilter.frag  BloomUpsample.fs
assets/glsl_shaders/shader_library/: shadows.glsl  tonemapping.glsl
assets/glsl_shaders/shadows/: ShadowCaster.fs  shadows.glsl  unity_shadow_sampling_tent.glsl
assets/glsl_shaders/ssao/: BilateralBlur.fs  FinalBilateralBlur.fs  SAOBuffer.fs  SSAO.fs  SSAO.vs
assets/glsl_shaders/utils/: BlitColor.fs  DrawBoundingBox.frag  DrawBoundingBox.vert
assets/shaders/: BlinnPhong.fs  DeferredLit.fs  GBuffer.vs  PBRLit.fs
assets/shaders/common/: constants.glsl  functions.glsl  uniforms.glsl
assets/shaders/environment/: Cube.vs  IrradianceCubemap.fs  PrefilteredCubemap.fs  Skybox.fs
assets/shaders/pbr/: brdfs.glsl
assets/shaders/post_processing/: CombinePost.fs
assets/shaders/post_processing/bloom/: BloomBlurHorizontal.fs  BloomBlurVertical.fs
assets/shaders/shadows/: shadows.glsl
assets/shaders/ssao/: FinalBilateralBlur.fs  SSAO.fs
assets/shaders/utils/: CopyDepth.fs  DrawBoundingBox.vs  Explode.gs
assets/textures/environments/: papermill.ktx
src/: AssetsLoader.cpp  AssetsLoader.h  SceneGraph.cpp  SceneGraph.h  SceneRenderGraph.cpp  SceneRenderGraph.h  defines.h  globals.h  main.cpp  ptr.h
src/base/: Buffer.h  ElementBuffer.cpp  ElementBuffer.h  Material.cpp  Material.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/base/texture/: Texture.cpp  Texture.h
src/cameras/: ArcballCamera.cpp  ArcballCamera.h  Camera.cpp  Camera.h
src/lights/: BaseLight.cpp  BaseLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h
src/loader/: AssetsLoader.cpp  AssetsLoader.h
src/meshes/: AABBCube.cpp  AABBCube.h  Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Models.h  Sphere.cpp  Sphere.h  TriangleCS.cpp  TriangleCS.h
src/model/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Models.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  Vertex.h
src/opengl/: Buffer.h  ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/renderer/: Blitter.cpp  Blitter.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DirectionalLightShadowMap.cpp  DirectionalLightShadowMap.h  EnvironmentIBL.cpp  EnvironmentIBL.h  GLStateCache.cpp  GLStateCache.h  MeshRender.cpp  MeshRender.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.h  RenderNode.cpp  RenderNode.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  SceneNode.cpp  SceneNode.h  SceneRenderer.cpp  SceneRenderer.h  ScreenSpaceAmbientOcclusion.cpp  ScreenSpaceAmbientOcclusion.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShapeRenderer.cpp  ShapeRenderer.h  (+4 more)
src/scene/: SceneNode.cpp  SceneNode.h  SceneRenderGraph.cpp  SceneRenderGraph.h
src/tool/: AssetsLoader.cpp  AssetsLoader.h
src/utility/: Collision.cpp  Collision.h  StatsRecorder.cpp  StatsRecorder.h  StatusRecorder.cpp  StatusRecorder.h
